# rust-macro-analyzer

./: .gitignore  Cargo.toml  README.md  plot.py  test.rs
bindings/: AnalyzisResults.ts  AttributeMacroUsage.ts  CharLineCount.ts  CrateAnalyzis.ts  DeriveMacroUsage.ts  MacroAnalyzis.ts  RepoAnalyzis.ts
graphql/: repos_query.graphql  repos_query.rs
src/: analyzis.rs  cargo.rs  clear_cfg.rs  count_chars.rs  count_code.rs  crate_paths.rs  data.rs  error.rs  expand.rs  github.rs  http.rs  lines_count.rs  main.rs  parser.rs  plot.rs  results.rs  state.rs  utils.rs
web/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json
web/bindings/: Data.ts  DeriveMacroUsage.ts  DeriveUsage.ts  MacroAnalyzis.ts  MacroUsage.ts
web/src/: App.tsx  index.css
web/src/components/: result.tsx
web/src/components/charts/: derive-macro-usage.tsx  intro-info.tsx  lines-per-repository.tsx  macro-definition-count-by-type.tsx  macro-definitions-per-crate-lines-normalized.tsx  macro-definitions-per-crate.tsx  macro-definitions-per-repo-lines-normalized.tsx  macro-definitions-per-repo.tsx  macro-invocation-count-by-type.tsx  macro-invocations-per-crate-lines-normalized.tsx  macro-invocations-per-crate.tsx  macro-invocations-per-repo-lines-normalized.tsx  macro-invocations-per-repo.tsx  misc-info.tsx  most-used-builtin-attribute-macros.tsx  most-used-custom-attribute-macros.tsx  most-used-derive-macros.tsx  most-used-function-declarative-macros.tsx
web/src/hooks/: use-data.tsx
web/src/utils/: data.ts  react-utils.tsx  string.ts
(+1 files in other folders)
