[package]
name = "rust-macros-scraper"
version = "0.1.0"
edition = "2021"

[features]
expand = []

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
reqwest = { version = "0.12.4", features = ['json'] }
graphql_client = { version = "0.14" }
serde = { version = "1.0.201", features = ['derive'] }
ron = { version = "0.8.1" }
toml = { version = "0.8.12" }
chrono = { version = "0.4.38", features = ['serde'] }
tree-sitter = { version = "0.22.6" }
tree-sitter-rust = { version = "0.21.2" }
glob = "0.3.1"
futures = { version = "0.3.30" }
serde_json = "1.0.124"
ts-rs = "9.0.1"
tide = "0.16.0"
async-std = "1.12.0"

[build-dependencies]
cc = "*"
